minor style tweaks

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>SPF Wizard</title>
+    <title>SPF Record Generator | Built by Constellix</title>
+    <meta name="description" content="Free SPF generator tool. Create your own custom SPF records by answering a few questions, then copy and paste into a TXT record through your DNS provider. " />
     <link rel="icon" href="https://dnsmadeeasy.com/favicon.ico">
 
     <!-- Styles -->
@@ -156,10 +157,19 @@
                         </form>
                     </div>
                 </div>
-                <div class="row">
-                    <div class="footer">
-                        <p>Built with <i class="fal fa-heart"></i> by <a href="https://constellix.com">Constellix</a></p>
+            </div>
+            <div class="built-by">
+                <div class="built-by__background">
+                    <div class="built-by__text">
+                        <p>Built with love<br>
+                            by <a href="https://constellix.com">Constellix</a><br>
+                        </p>
                     </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="footer">
+                    <p>Icons by <a href="https://www.flaticon.com/" target="_blank">Flaticon</a></p>
                 </div>
             </div>
         </div>
