--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
     <div class="section__spf-wizard">
         <div class="button--syntax">
-            <a href="/syntax/">
+            <a href="syntax/">
                 <i class="fal fa-question-circle"></i>
             </a>
         </div>
