fixed overflow issues when scrolling

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="footer">
+                <div class="col footer">
                     <p>Icons by <a href="https://www.flaticon.com/" target="_blank">Flaticon</a></p>
                 </div>
             </div>
